# stack-assembly

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/stack-assembly/: Cargo.toml
crates/stack-assembly-example-host/: Cargo.toml
crates/stack-assembly-example-host/src/: main.rs
crates/stack-assembly/src/: effect.rs  eval.rs  lib.rs  memory.rs  operand_stack.rs  script.rs  stack.rs  value.rs
crates/stack-assembly/src/tests/: arithmetic.rs  assert.rs  bitwise.rs  comments.rs  comparison.rs  control_flow.rs  evaluation.rs  integers.rs  memory.rs  mod.rs  stack_shuffling.rs
examples/: arithmetic.stack  bitwise.stack  call-either.stack  call.stack  comparison.stack  control-flow.stack  loop.stack  memory.stack  stack-shuffling.stack  unstructured-control-flow.stack
src/: effect.rs  eval.rs  lib.rs  main.rs  memory.rs  stack.rs  tests.rs  value.rs
src/tests/: arithmetic.rs  assert.rs  bitwise.rs  comments.rs  comparison.rs  control_flow.rs  evaluation.rs  integers.rs  memory.rs  mod.rs  stack_shuffling.rs
