[package]
name = "stack-assembly-example-host"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.stack-assembly]
path = "../stack-assembly"
